Fix file upload overflow

--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -21,7 +21,5 @@ body {
 
 .file-input-zone input[type=file] {
     position: absolute;
-    width: 100%;
-    height: 100%;
     opacity: 0;
 }
